feat(source): refactor RocketMQDynamicTableSource